added config for scripts files

--- a/_src/styles/style.scss
+++ b/_src/styles/style.scss
@@ -1,3 +1,5 @@
+//******************** LIBS ********************
+
 //******************** GLOBAL ********************
 @import "global/variables";
 @import "global/default-style";
