added libs normalize.scss

--- a/_src/styles/style.scss
+++ b/_src/styles/style.scss
@@ -1,4 +1,5 @@
 //******************** LIBS ********************
+@import "libs/normalize";
 
 //******************** GLOBAL ********************
 @import "global/variables";
