--- a/_src/styles/global/default-style.scss
+++ b/_src/styles/global/default-style.scss
@@ -1,27 +1,60 @@
-h1, h2, h3, h4, h5, h6, p, {
-  margin: 0;
-  color: black;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-ul {
-  list-style: none;
+html {
+  font-size: 10px;
+}
+
+/* Выставляем основные настройки по-умолчанию для body */
+body {
   padding: 0;
   margin: 0;
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  line-height: 1.5;
 }
 
-button {
-  color: black;
+/* Убираем внешние отступы */
+h1,
+h2,
+h3,
+h4,
+p,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
 
-  &:focus, &:focus-visible {
-    outline: none;
-  }
+/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
+ul[class],
+ol[class] {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
 
 a {
-  color: black;
+  text-decoration: none;
+  bottom: 0;
+  color: inherit;
+  font-family: inherit;
+}
 
-  &:hover {
-    color: black;
-    text-decoration: none;
-  }
+img {
+  max-width: 100%;
+  display: block;
 }
