edit path files

--- a/_src/styles/style.scss
+++ b/_src/styles/style.scss
@@ -15,5 +15,7 @@
 @import "global/helper-classes";
 @import "global/typography";
 
+//******************** COMPONENT ********************
+
 //******************** BLOCKS ********************
 @import "block/header";
