--- a/_src/styles/global/default-style.scss
+++ b/_src/styles/global/default-style.scss
@@ -32,9 +32,7 @@ dd {
   margin: 0;
 }
 
-/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
-ul[class],
-ol[class] {
+ul, ol {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -56,5 +54,7 @@ a {
 
 img {
   max-width: 100%;
+  max-height: 100%;
+  height: auto;
   display: block;
 }
