--- a/_src/styles/global/helper-classes.scss
+++ b/_src/styles/global/helper-classes.scss
@@ -1,12 +1,3 @@
-// body-wrapper для удобства работы с Pixel Perfect !!! УДАЛЯТЬ !!!
-//=============================
-.body-wrapper {
-  width: 1920px;
-  margin: 0 auto;
-}
-
-//=============================
-
 .container {
   max-width: 1320px;
   width: 100%;
@@ -55,3 +46,14 @@
   border: 0;
 }
 
+.display-none {
+  display: none;
+}
+
+.icon {
+  stroke: currentColor;
+  width: 24px;
+  height: 24px;
+}
+
+//=============================
