edit fonts mixin

--- a/_src/styles/_mixins/font.scss
+++ b/_src/styles/_mixins/font.scss
@@ -6,8 +6,7 @@
     font-family: '#{$font-family}';
     src: url('#{$url}.woff2') format('woff2'),
     url('#{$url}.woff') format('woff'),
-    url('#{$url}.ttf') format('ttf'),
-    url('#{$url}.eot') format('eot');
+    url('#{$url}.ttf') format('ttf');
     font-weight: $font-weight;
     font-style: $font-style;
     font-display: swap;
@@ -18,4 +17,20 @@
 @mixin font($font-size, $line-height) {
   font-size: $font-size;
   line-height: math.div($line-height, $font-size);
+}
+
+// Отображение количества строк
+@mixin line-text-hidden($col: 2) {
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: $col; /* количество строк */
+}
+
+// Расстояние от текста до подчеркнутой линии
+@mixin underline-text($under: 4px) {
+  text-decoration-line: underline;
+  text-underline-offset: $under;
 }
