added file "settings"

--- a/_src/styles/style.scss
+++ b/_src/styles/style.scss
@@ -10,8 +10,7 @@
 @import "global/fonts";
 
 //******************** OTHER ********************
-@import "global/default-style";
-@import "global/helper-classes";
+@import "global/settings";
 @import "global/typography";
 
 //******************** COMPONENT ********************
