update typography settings

--- a/_src/styles/global/typography.scss
+++ b/_src/styles/global/typography.scss
@@ -82,11 +82,11 @@ p {
   }
 }
 
-strong, .strong {
+strong, b .strong {
   font-weight: bold;
 }
 
-del, .del {
+del, s .del {
   text-decoration-line: line-through;
 }
 
