--- a/_src/styles/global/settings.scss
+++ b/_src/styles/global/settings.scss
@@ -2,6 +2,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -10,26 +12,9 @@ html {
 
 /* Выставляем основные настройки по-умолчанию для body */
 body {
-  padding: 0;
-  margin: 0;
   min-height: calc(100vh + 1px);
   scroll-behavior: smooth;
   line-height: 1.25;
-}
-
-/* Убираем внешние отступы */
-h1,
-h2,
-h3,
-h4,
-p,
-li,
-figure,
-figcaption,
-blockquote,
-dl,
-dd {
-  margin: 0;
 }
 
 ul, ol {
@@ -59,6 +44,16 @@ a {
   text-decoration: none;
   color: inherit;
   font-family: inherit;
+}
+
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 img {
@@ -116,7 +111,7 @@ img {
   border: 0;
 }
 
-.display-none {
+.d-none {
   display: none !important;
 }
 
