--- a/_src/styles/global/settings.scss
+++ b/_src/styles/global/settings.scss
@@ -62,6 +62,29 @@ img {
 }
 
 //=============================
+.settings-project-page {
+  section {
+    padding: 20px 0;
+  }
+
+  .title {
+    font-size: 32px;
+  }
+
+  hr {
+    margin: 15px 0;
+  }
+
+  .code {
+    font-family: "Lucida Console", sans-serif;
+    font-size: 12px;
+    padding: 15px;
+    background-color: rgba(192, 192, 192, 0.5);
+    width: max-content;
+    border: 2px solid #31ba31;
+    margin-bottom: 15px;
+  }
+}
 
 .container {
   max-width: 1320px;
@@ -119,4 +142,28 @@ img {
   stroke: currentColor;
   width: 24px;
   height: 24px;
+}
+
+.w-25 {
+  width: 25%;
+}
+
+.w-50 {
+  width: 50%;
+}
+
+.w-75 {
+  width: 75%;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.show {
+
+}
+
+.hidden {
+
 }
