--- a/_src/styles/global/settings.scss
+++ b/_src/styles/global/settings.scss
@@ -160,10 +160,40 @@ img {
   width: 100%;
 }
 
-.show {
-
+.hidden {
+  visibility: hidden;
 }
 
-.hidden {
+.show {
+  visibility: inherit!important;
+}
 
+.modal {
+  visibility: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  // .modal__content
+  &__content {
+    position: relative;
+    max-width: 500px;
+    width: 100%;
+    padding: 20px 15px;
+    background: white;
+    border-radius: 8px;
+  }
+
+  // .modal__btn-close
+  &__btn-close {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+  }
 }
