--- a/_src/styles/global/settings.scss
+++ b/_src/styles/global/settings.scss
@@ -80,7 +80,8 @@ img {
     font-size: 12px;
     padding: 15px;
     background-color: rgba(192, 192, 192, 0.5);
-    width: max-content;
+    max-width: max-content;
+    width: 100%;
     border: 2px solid #31ba31;
     margin-bottom: 15px;
   }
