create section "tabs" for settings-page

--- a/_src/pages/components/modal-window.html
+++ b/_src/pages/components/modal-window.html
@@ -1,28 +1,28 @@
 <section class="modal-section">
+    <!--region code-->
+
     <h3 class="title">Modal window</h3>
     <hr>
     <p class="code">
         &lt!-- Button trigger modal --&gt<br>
         &ltbutton class="my-modal btn" type="button"&gtOpen popup&lt/button&gt<br><br>
 
-        &lt!-- Modal  --&gt<br>
+        &lt!-- Modal --&gt<br>
         &ltdiv class="modal" id="my-modal"&gt<br>
-        &nbsp; &ltdiv class="modal__content"&gt<br>
+        &nbsp;&ltdiv class="modal__content"&gt<br>
         &nbsp;&nbsp; &ltbutton class="modal__btn-close" type="button"&gtX&lt/button&gt<br>
 
-        &nbsp;&nbsp;&nbsp;&ltp&gtLorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consectetur expedita
-        inventore iste nobis<br>
-        &nbsp;&nbsp;&nbsp; nostrum. Aliquam architecto assumenda beatae culpa ducimus id ipsum molestiae, nisi optio
-        perspiciatis<br>
-        &nbsp;&nbsp;&nbsp; quaerat quo, voluptatibus?&lt/p&gt<br>
-        &nbsp;&nbsp;&lt/div&gt<br>
+        &nbsp;&nbsp;&nbsp;&ltp&gtcontent&lt/p&gt<br>
+        &nbsp;&lt/div&gt<br>
         &lt/div&gt<br><br>
 
-        &lt!-- Initialize Modal  --&gt<br>
+        &lt!-- Initialize Modal --&gt<br>
         &ltscript&gt<br>
         &nbsp;&nbsp; modal(".my-modal", ".modal__btn-close", "#my-modal", [timer]);<br>
         &lt/script&gt
     </p>
+
+    <!--endregion-->
 
     <button class="my-modal btn" type="button">Open popup</button>
 
@@ -35,4 +35,5 @@
                 quaerat quo, voluptatibus?</p>
         </div>
     </div>
+
 </section>
