--- a/_src/styles/global/settings.scss
+++ b/_src/styles/global/settings.scss
@@ -44,6 +44,10 @@ a {
   text-decoration: none;
   color: inherit;
   font-family: inherit;
+
+  &:hover {
+    color: inherit;
+  }
 }
 
 article, aside, details, figcaption, figure,
@@ -87,6 +91,8 @@ img {
     margin-bottom: 15px;
   }
 }
+
+//=============================
 
 .container {
   max-width: 1320px;
