--- a/_src/styles/global/typography.scss
+++ b/_src/styles/global/typography.scss
@@ -10,6 +10,7 @@ h6 {
   //color: $black;
   //font-weight: 400;
   //line-height: 1.25;
+  margin: 0;
 }
 
 h1, .h1 {
@@ -62,7 +63,7 @@ p {
   //font-size: 18px;
   //font-weight: 400;
   //line-height: 1.5;
-  //margin: 0;
+  margin: 0;
 
   @include max-screen(767) {
   }
