renamed global scss file

--- a/_src/styles/style.scss
+++ b/_src/styles/style.scss
@@ -10,7 +10,7 @@
 @import "global/fonts";
 
 //******************** OTHER ********************
-@import "global/settings";
+@import "global/base";
 @import "global/typography";
 
 //******************** COMPONENT ********************
