--- a/_src/styles/global/base.scss
+++ b/_src/styles/global/base.scss
@@ -7,23 +7,19 @@
 }
 
 html {
+  scroll-behavior: smooth;
   //font-size: 10px;
 }
 
 /* Выставляем основные настройки по-умолчанию для body */
 body {
-  min-height: calc(100vh + 1px);
-  scroll-behavior: smooth;
   line-height: 1.25;
 }
 
 ul, ol {
   margin: 0;
-
-  &.list-unstyled {
-    list-style: none;
-    padding: 0;
-  }
+  padding: 0;
+  list-style: none;
 }
 
 input,
@@ -63,11 +59,152 @@ table {
 img {
   width: 100%;
   display: block;
+  object-fit: cover;
 }
 
-//=============================
+//=========================================
+//============ Typography =================
 
-.settings-project-page {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  //font-family: $futura;
+  //color: $black;
+  //font-weight: 400;
+  //line-height: 1.25;
+  margin: 0;
+}
+
+h1, .h1 {
+  //font-size: 42px;
+
+  @include max-screen(767) {
+  }
+
+  &.lg {
+  }
+
+  &.sm {
+  }
+}
+
+h2, .h2 {
+
+  @include max-screen(767) {
+
+  }
+}
+
+h3, .h3 {
+
+  @include max-screen(767) {
+  }
+}
+
+h4, .h4 {
+
+  @include max-screen(767) {
+  }
+}
+
+h5, .h5 {
+
+  @include max-screen(767) {
+  }
+}
+
+h6, .h6 {
+
+  @include max-screen(767) {
+  }
+}
+
+p {
+  //font-family: $futura;
+  //color: $black;
+  //font-size: 18px;
+  //font-weight: 400;
+  //line-height: 1.5;
+  margin: 0;
+
+  @include max-screen(767) {
+  }
+
+  &.lg {
+
+    @include max-screen(767) {
+    }
+  }
+
+  &.sm {
+    @include max-screen(767) {
+    }
+  }
+}
+
+strong, b .strong {
+  font-weight: 700;
+}
+
+del, s .del {
+  text-decoration-line: line-through;
+}
+
+ins, u, .text-underline {
+  @include underline-text(4px);
+}
+
+.caps {
+  text-transform: uppercase;
+}
+
+small, .small {
+
+}
+
+.fw-100 {
+  font-weight: 100;
+}
+
+.fw-200 {
+  font-weight: 200;
+}
+
+.fw-300 {
+  font-weight: 300;
+}
+
+.fw-400 {
+  font-weight: 400;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.fw-600 {
+  font-weight: 600;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
+
+.fw-800 {
+  font-weight: 800;
+}
+
+.fw-900 {
+  font-weight: 900;
+}
+
+//=========================================
+//============ Other =====================
+
+.style-guide-page {
   section {
     padding: 20px 0;
   }
@@ -91,8 +228,6 @@ img {
     margin-bottom: 15px;
   }
 }
-
-//=============================
 
 .container {
   max-width: 1320px;
@@ -166,14 +301,6 @@ img {
 
 .w-100 {
   width: 100%;
-}
-
-.hidden {
-  visibility: hidden;
-}
-
-.show {
-  visibility: inherit!important;
 }
 
 .modal {
