--- a/_src/styles/global/variables.scss
+++ b/_src/styles/global/variables.scss
@@ -1,18 +1,31 @@
 // ------------------------------------------------
 // ------------ COLOR ------------
-$black: #000000;
-$white: #ffffff;
+$ui-black: #000000;
+$ui-white: #ffffff;
 
 // ------------------------------------------------
 // ------------ FONTS ------------
-$walsheim: "GT Walsheim Pro", sans-serif;
+$ui-font-walsheim: "Poppins", sans-serif;
 
 
 // ------------------------------------------------
 // ------------ Z-Index ------------
-$index-1: 1; // Для наползающих элементов в блоке
-$index-2: 2; // Для наползающих элементов в блоке
-$index-3: 3; // Для затемняющих или блюр масок
-$index-4: 4; // Для сайдбаров
-$index-5: 5; // Для модальных окон
-$index-6: 6; // Для элементов перекрывающих все
+$ui-index-1: 1; // Для наползающих элементов в блоке
+$ui-index-2: 2; // Для наползающих элементов в блоке
+$ui-index-3: 3; // Для затемняющих или блюр масок
+$ui-index-4: 4; // Для сайдбаров
+$ui-index-5: 5; // Для модальных окон
+$ui-index-6: 6; // Для элементов перекрывающих все
+
+
+// ------------------------------------------------
+// ------------ Breakpoints ------------
+$ui-breakpoints-sm: "576px";
+$ui-breakpoints-md: "768px";
+$ui-breakpoints-lg: "992px";
+$ui-breakpoints-xl: "1200px";
+$ui-breakpoints-xxl: "1400px";
+
+// use this: @media #{$ui-mouse-device} {}
+$ui-mouse-device: "(hover: hover) and (pointer: fine)"; // Работает только при наведении мышки
+$ui-touch-device: "(hover: none) and (pointer: coarse)"; // Работает только на сенсорных экранах
