--- a/_src/styles/global/variables.scss
+++ b/_src/styles/global/variables.scss
@@ -1,12 +1,12 @@
 // ------------------------------------------------
 // ------------ COLOR ------------
-$ui-black: #000000;
-$ui-white: #ffffff;
+$ui-color-black: #000000;
+$ui-color-white: #ffffff;
 
 
 // ------------------------------------------------
 // ------------ FONTS ------------
-$ui-font-walsheim: "Poppins", sans-serif;
+$ui-font-poppins: "Poppins", sans-serif;
 
 
 // ------------------------------------------------
