--- a/_src/styles/_mixins/general.scss
+++ b/_src/styles/_mixins/general.scss
@@ -51,6 +51,52 @@
   }
 }
 
+@mixin hidden-scrollbar() {
+  scrollbar-color: #44C355 transparent;
+  scrollbar-width: thin;
+
+  // style for scrollbar
+  ::-webkit-scrollbar {
+    width: 10px; /* ширина для вертикального скролла */
+    height: 10px; /* высота для горизонтального скролла */
+    background-color: transparent;
+  }
+
+  /* ползунок скроллбара */
+  ::-webkit-scrollbar-thumb {
+    background-color: transparent;
+    border-radius: 20px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: transparent;
+  }
+
+  /* Стрелки */
+
+  ::-webkit-scrollbar-button:vertical:start:decrement,
+  ::-webkit-scrollbar-button:vertical:end:increment,
+  ::-webkit-scrollbar-button:vertical:end:increment,
+  ::-webkit-scrollbar-button:horizontal:start:decrement,
+  ::-webkit-scrollbar-button:horizontal:end:increment {
+    display: none;
+  }
+}
+
+// Работает только при наведении мышки
+@mixin mouse-device {
+  @media (hover: hover) and (pointer: fine) {
+    @content;
+  }
+}
+
+// Работает только на сенсорных экранах
+@mixin touch-device {
+  @media (hover: none) and (pointer: coarse) {
+    @content;
+  }
+}
+
 // ui-style
 @mixin ui-border {
   border: 1px solid #000000;
