add new brake point to variables

--- a/_src/styles/global/variables.scss
+++ b/_src/styles/global/variables.scss
@@ -13,14 +13,21 @@ $ui-font-poppins: "Poppins", sans-serif;
 // ------------ Z-Index ------------
 $ui-index-1: 1; // Для наползающих элементов в блоке
 $ui-index-2: 2; // Для наползающих элементов в блоке
-$ui-index-3: 3; // Для затемняющих или блюр масок
-$ui-index-4: 4; // Для сайдбаров
-$ui-index-5: 5; // Для модальных окон
-$ui-index-6: 6; // Для элементов перекрывающих все
+$ui-index-3: 3; // Для наползающих элементов в блоке
+$ui-index-4: 4; // Для наползающих элементов в блоке
+$ui-index-5: 5; // Для наползающих элементов в блоке
+
+$ui-index-6: 6; // Для затемняющих или блюр масок
+$ui-index-7: 7; // Для сайдбаров
+$ui-index-8: 8; // Для модальных окон
+$ui-index-9: 9; // Для элементов перекрывающих все
 
 
 // ------------------------------------------------
 // ------------ Breakpoints ------------
+$ui-breakpoints-xxl: "1400px";
+$ui-breakpoints-xl--min: "1401px";
+
 $ui-breakpoints-xl: "1300px";
 $ui-breakpoints-xl--min: "1301px";
 
